--- a/CLV_Prediction.ipynb
+++ b/CLV_Prediction.ipynb
@@ -2808,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "94466f32-eafc-4e10-95ef-06959a70c8ce",
    "metadata": {},
    "outputs": [],
@@ -2817,7 +2817,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "def linear_regression(X,y,graph=False):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2,shuffle=False)\n",
     "    model=LinearRegression()    \n",
     "    model.fit(X_train,y_train)\n",
     "    preds=model.predict(X_test)\n",
@@ -2828,7 +2828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "58bbca25-7a3b-40a8-861e-b628ad880f1b",
    "metadata": {},
    "outputs": [],
@@ -2836,7 +2836,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "def random_forest(X,y,trees=50,dep=5,graph=False):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=3)  \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=3,shuffle=False)  \n",
     "    rf_model = RandomForestRegressor(\n",
     "        n_estimators=trees,\n",
     "        max_depth=dep,\n",
@@ -2853,7 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "825f3c5e-ac91-49b1-a705-033933c40c28",
    "metadata": {},
    "outputs": [],
@@ -2862,7 +2862,7 @@
     "\n",
     "def xgboost_regressor(X, y, estimators=50, depth=5, lr=0.1,graph=False):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X, y, test_size=0.2, random_state=3\n",
+    "        X, y, test_size=0.2, random_state=3,,shuffle=False\n",
     "    )\n",
     "    model_xg = XGBRegressor(\n",
     "        n_estimators=estimators,\n",
@@ -3100,7 +3100,7 @@
     "    n_jobs=-1\n",
     ")\n",
     "X=rfm[['Recency','Frequency','Monetary','c']]\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=3)\n",
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=3,shuffle=False)\n",
     "rand_search.fit(X_train, y_train)\n",
     "\n",
     "print(\"Best RF Params:\", rand_search.best_params_)\n",
@@ -3206,7 +3206,7 @@
     "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "   X2 , y, test_size=0.2, random_state=2\n",
+    "   X2 , y, test_size=0.2, random_state=2,shuffle=False\n",
     ")\n",
     "rand_search.fit(X_train, y_train)\n",
     "\n",
@@ -3233,7 +3233,7 @@
     "    random_state=2\n",
     ")\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X1, y, test_size=0.2, random_state=2)\n",
+    "        X1, y, test_size=0.2, random_state=2,shuffle=False)\n",
     "mlp.fit(X_train, y_train)\n",
     "preds = mlp.predict(X_test)\n",
     "\n",
@@ -3263,13 +3263,12 @@
    "outputs": [],
    "source": [
     "from catboost import CatBoostRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X = rfm_encoded.drop(['Future_Monetary'], axis=1)\n",
     "y = rfm_encoded['Future_Monetary']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=2\n",
+    "    X, y, test_size=0.2, random_state=2,,shuffle=False\n",
     ")\n",
     "\n",
     "categorical_features = ['R_Score','F_Score','M_Score']\n",
@@ -3311,7 +3310,7 @@
     "                    )\n",
     "y = rfm_encoded['Future_Monetary']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2,,shuffle=False)\n",
     "\n",
     "# Linear\n",
     "lr = LinearRegression()\n",
